tests/errors/syn_while6.java
public class syn_while6 {
public static void main(String[] args){
while ( true {
 
}
}
}